[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitmatrix-spatial-computing"
version = "1.0.0"
description = "BitMatrix Spatial Computing (BSC) - A framework for multidimensional data representation and processing"
readme = "README.md"
authors = [
    {name = "Euan Craig", email = "info@digitaleuan.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["spatial computing", "bitmatrix", "multidimensional", "data representation", "KTA"]
dependencies = [
    "numpy>=1.20.0",
]
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://digitaleuan.com/bitmatrix-complete/"
"Bug Tracker" = "https://github.com/yourusername/bitmatrix-spatial-computing/issues"
"Documentation" = "https://digitaleuan.com/bitmatrix-complete/bitmatrix-toolkit-documentation.html"

[project.scripts]
bsc-cli = "bsc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bsc" = ["py.typed"]
